@@ -1,3 +1,12 @@
+2009-09-21  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinydebian.el (tinydebian-google-code-bts-url-compose): New.
+	(tinydebian-bts-url-bug-compose): Add code.google.com
+	(tinydebian-bug-ask-url-for-bts-and-number): Add parameter
+	`project'.
+	(tinydebian-bug-ask-bts-and-number): Ask project if needed.
+	(tinydebian-bug-url-forward): Add code.google.com support.
+
 2009-09-20  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinyeat.el
